<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Car Selling App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_cars_for_sale">Cars For Sale</string>
    <string name="Manufacturer">Brand</string>
    <string name="Model">Model</string>
    <string name="Year">Year</string>
    <string name="Kilometers">Km</string>
    <string name="Price">Price</string>
    <string name="Order">Order</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="Search">Search</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="menu">menu</string>

    <string-array name="ListManufacturer">
        <item>Alfa Romeo</item>
        <item>Aston Martin</item>
        <item>Audi </item>
        <item>Bentley </item>
        <item>BMW </item>
        <item>Bugatti </item>
        <item>Chevrolet </item>
    </string-array>
    <string-array name="ListOrder">
        <item>Datum</item>
        <item>Preis</item>
        <item>Km</item>
    </string-array>

    <string-array name="PopUpIMage">
        <item>Take a photo</item>
        <item>Take from gallery</item>
        <item>Cancel</item>
    </string-array>

    <string name="drawer_open">Open menu</string>
    <string name="drawer_close">Close menu</string>
    <string name="action_Login">Login</string>
    <string name="action_logout">Logout</string>

    <string-array name="ListMenu">
        <item>Home page</item>
        <item>Login</item>
        <item>MyCars</item>
        <item>Insert Car </item>
    </string-array>

    <string name="title_activity_infos">Infos</string>
    <string name="hello_world">Hello world!</string>

    <!-- Infos page -->
    <string name="Infos">Infos</string>
    <string name="Credit">Created by Muhamed and Brice</string>

    <!-- -->

    <string name="title_activity_show_car_details">ShowCarDetails</string>
    <string name="manufacture">Brand</string>
    <string name="model">Model</string>
    <string name="weight">Weight</string>
    <string name="hp">HP</string>
    <string name="km">Kilometers</string>
    <string name="doors">Doors</string>
    <string name="description">Additional description</string>
    <string name="price">Price</string>
    <string name="fuel">Fuel</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="postalCode">Postal code</string>
    <string name="place">Place</string>
    <string name="car">Car</string>
    <string name="inputUser">---</string>
    <string name="year">Year</string>
    <string name="gearbox">Gearbox</string>
    <string name="seller">Seller</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="ToSell">ToSell</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>

    <string name="colorText">#FFFFFFFF</string>
    <string name="title_activity_insert_car_details">Insert_car_details</string>

    <string name="submit">Submit</string>

    <string-array name="gearboxList">
        <item>Getriebeart</item>
        <item>Automatikgetriebe</item>
        <item>Schaltgetriebe</item>
    </string-array>

    <string-array name="fuelList">
        <item>Fuel</item>
        <item>Diesel</item>
        <item>Gasoline</item>
    </string-array>
    <string name="title_activity_insert_seller">InsertSeller</string>
    <string name="title_activity_about">About</string>
    <string name="action_insert">Insert</string>
    <string name="action_myCars">My cars</string>
    <string name="action_about">About</string>
    <string name="action_login">Login</string>
    <string name="account">Useraccount</string>
    <string name="Image">Photo</string>
    <string name="AddPhoto">Add Photo</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="title_activity_language">Language</string>
    <string name="pref_locale">en</string>
    <string name="contactAdd">Contact successfully added</string>
    <string name="ContactUsed">Contact already used</string>
    <string name="NoCar">no car available</string>
    <string name="FieldNotEmpty">This field cannot be empty !</string>
    <string name="CarAdded">Car successfully added</string>
    <string name="PasswordNotEmpty">The password cannot be empty !</string>
    <string name="UsernameNotempty">The username cannot be empty !</string>
    <string name="WrongPassword">"Wrong Username/Password "</string>
</resources>
